--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"typescript": "^4.3.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.14.3",
+		"babel-loader": "^8.2.2",
+		"dotenv": "^10.0.0",
+		"dotenv-webpack": "^7.0.3",
 		"html-webpack-plugin": "^5.3.1",
 		"ts-loader": "^9.2.2",
 		"webpack": "^5.38.1",
